# derive-enum-all-values

./: CONTRIBUTING.MD  Cargo.toml  README.MD  cobertura.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: test-derive-all-values.rs
