[package]
name = "derive-enum-all-values"
version = "0.2.0"
edition = "2021"
description = "A procedural derive macro which exposes a method named `all_values` that returns all defined values as a compile-time static."
repository = "https://github.com/Sewer56/derive-enum-all-values"
license-file = "LICENSE"
readme = "README.MD"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
# https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "2.0.37", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.67"